force-app/main/default/objects/Interface_Operation_Setting__mdt/Interface_Operation_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Interface Operation Setting</label>
    <pluralLabel>Interface Operation Settings</pluralLabel>
</CustomObject>