force-app/main/default/objects/Interface_Operation_Setting__mdt/fields/Call_With_Retry__c.field-meta.xml
<CustomField>
    <fullName>Call_With_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call With Retry</label>
    <type>Checkbox</type>
</CustomField>