force-app/main/default/objects/Interface_Operation_Setting__mdt/fields/Client_Key_Header_Name_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Client_Key_Header_Name_Overwrite__c</fullName>
    <label>Client Key Header Name Overwrite</label>
    <type>TextArea</type>
</CustomField>