force-app/main/default/objects/Interface_Operation_Setting__mdt/fields/Create_Sub_URL__c.field-meta.xml
<CustomField>
    <fullName>Create_Sub_URL__c</fullName>
    <label>Create Sub URL (Optional)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>