force-app/main/default/objects/Interface_Operation_Setting__mdt/fields/Enable_URL_Param__c.field-meta.xml
<CustomField>
    <fullName>Enable_URL_Param__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether the request payload is constructed in a URL format, if left unchecked, request payload will be formatted into a JSON structure.</description>
    <label>Enable URL Param</label>
    <type>Checkbox</type>
</CustomField>