force-app/main/default/objects/Interface_Operation_Setting__mdt/fields/Interface_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Interface_Configuration__c</fullName>
    <label>Interface Configuration</label>
    <referenceTo>Interface_Configuration__mdt</referenceTo>
    <relationshipName>Integration_Operation_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>