force-app/main/default/objects/Interface_Operation_Setting__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Abbreviated language setting of the User. This will be used for the LTC API Fields Map.</description>
    <inlineHelpText>Abbreviated language setting of the User. This will be used for the LTC API Fields Map.</inlineHelpText>
    <label>Language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>