force-app/main/default/objects/Interface_Operation_Setting__mdt/fields/Msg_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Msg_Mapping__c</fullName>
    <label>Object Conversion Map</label>
    <referenceTo>Object_Conversion_Map__mdt</referenceTo>
    <relationshipLabel>Interface Operation Settings</relationshipLabel>
    <relationshipName>Interface_Operation_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>