force-app/main/default/objects/Interface_Operation_Setting__mdt/fields/Pass_Key_Header_Name_overwrite__c.field-meta.xml
<CustomField>
    <fullName>Pass_Key_Header_Name_overwrite__c</fullName>
    <label>Pass Key Header Name overwrite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>