force-app/main/default/objects/Interface_Operation_Setting__mdt/fields/Test_Data_Verification__c.field-meta.xml
<CustomField>
    <fullName>Test_Data_Verification__c</fullName>
    <label>Test Data Verification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>