force-app/main/default/objects/Interface_Operation_Setting__mdt/fields/Update_Method_overwrite__c.field-meta.xml
<CustomField>
    <fullName>Update_Method_overwrite__c</fullName>
    <label>Update Method (overwrite)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POST</fullName>
                <default>true</default>
                <label>POST</label>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>GET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>