force-app/main/default/objects/Interface_Operation_Setting__mdt/fields/Upgrade_Indication_Field__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Indication_Field__c</fullName>
    <label>Upgrade_Indication_Field_</label>
    <length>255</length>
    <type>Text</type>
</CustomField>