force-app/main/default/objects/Interface_Operation_Setting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Key__c</columns>
    <columns>Upgrade_Indication_Field__c</columns>
    <columns>Msg_Mapping__c</columns>
    <columns>Interface_Configuration__c</columns>
    <columns>Call_With_Retry__c</columns>
    <columns>Sub_URL__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>